--- a/templates/base.html
+++ b/templates/base.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous"> <!-- NEW -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Inventory Manager</title>
 </head>
 <h1>Inventory Manager</h1>
 <br>
-<div>
+<div class="home-button">
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
         </ul>
     </nav>
 </div>
-<hr>
 
 
 <body>
