--- a/static/style.css
+++ b/static/style.css
@@ -2,5 +2,11 @@ body {
     background-image:url("Screenshot\ 2021-05-28\ at\ 22.29.35.png")
 }
 
+.home-button {
+    text-align: center;
+}
 
+.options {
+    flex-direction: inherit;
+}
 
