--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
 
 <div class="inventory-button">
     <nav>
-        <li><a href="/inventory">Inventory</a></li>
+        <li><a href="/products">Products</a></li>
     </nav>
 </div>
 <br>
-<div class="order-button">
+<div class="order-button"> 
     <nav>
         <li><a href="/orders">Orders</a></li>
     </nav>
