--- a/templates/products/stock.html
+++ b/templates/products/stock.html
@@ -2,10 +2,18 @@
 
 {%block content%}
 
+<div>
+    <nav>
+        <ul>
+            <li><a href="/products/new">Add Item</a></li>
+        </ul>
+    </nav>
+</div>
+
 {% for product in all_products %}
     <div class="product">
         <div class="content">
-            {{product.prod_name}}</a> <br>
+            <a href="/products/{{product.id}}">{{product.prod_name}}</a> <br>
             {{product.prod_desc}} 
             <div class="qty">
                 {{product.stock_qty}}</a> units
