--- a/templates/products/stock.html
+++ b/templates/products/stock.html
@@ -14,7 +14,7 @@
     <div class="product">
         <div class="content">
             <a href="/products/{{product.id}}">{{product.prod_name}}</a> <br>
-            {{product.prod_desc}} 
+            <!-- {{product.prod_desc}} 
             <div class="qty">
                 {{product.stock_qty}}</a> units
                 <span class="cost">
@@ -25,7 +25,7 @@
                 </span>
             </div>
             <p><a href="/product/{{product.id}}/edit">Edit</a></p>
-            <div class="buttons">
+            <div class="buttons"> -->
                 <form class="delete-form" action="/products/{{product.id}}/delete" method="POST">
                     <button class="trash-button"><i class="fa fa-trash-o fa-3x" style="color:rgb(58, 12, 12)" aria-hidden="true"></i></button>
                 </form>
