add and edit working

--- a/templates/products/edit.html
+++ b/templates/products/edit.html
@@ -26,7 +26,7 @@
     <input type="number" id="sell" name="sell" value="{{product.sell_price}}" required>
   </div>
   
-  <div>
+  <!-- <div>
     <label for="manufacturer">Manufacturer:</label>
     <select id="manufacturer" name="manufacturer_id">
       {% for manufacturer in all_manufacturers %}
@@ -36,7 +36,7 @@
         </option>
       {% endfor %}
     </select>
-  </div>
+  </div> -->
 
   <button type="submit">Update item</button>
 </form>
