--- a/templates/products/show.html
+++ b/templates/products/show.html
@@ -6,7 +6,7 @@
     <p>{{product.prod_name}}</p>
     <hr>
     <p>{{product.prod_desc}}</p>
-    <p>{{product.qty}}</p>
+    <p>{{product.stock_qty}}</p>
     <p>{{product.buy_cost}}</p>
     <p>{{product.sell_price}}</p>
     <p><a href="/product/{{product.id}}/edit">Edit</a></p>
