stock warning working

--- a/templates/products/show.html
+++ b/templates/products/show.html
@@ -7,6 +7,7 @@
     <hr>
     <p>{{product.prod_desc}}</p>
     <p>{{product.stock_qty}}</p>
+    <p> Stock warning: {{stock}}</p>
     <p>{{product.buy_cost}}</p>
     <p>{{product.sell_price}}</p>
     <p><a href="/product/{{product.id}}/edit">Edit</a></p>
