--- a/templates/products/show.html
+++ b/templates/products/show.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 
-<div>
+<div class="show">
     <p>Name: {{product.prod_name}}</p>
     <hr>
     <p>Description: {{product.prod_desc}}</p>
