--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="nav-buttons">
-    <div class="inventory-button">
-        <nav>
-            <li><a href="/products">Products</a></li>
-        </nav>
+
+    <div class="nav-buttons">
+        <div class="inventory-button">
+            <nav>
+                <li><a href="/products">Go To Products</a></li>
+            </nav>
+        </div>
+        <br>
+        <div class="order-button"> 
+            <nav>
+                <li><a href="/orders">Check Orders</a></li>
+            </nav>
+        </div>
     </div>
-    <br>
-    <div class="order-button"> 
-        <nav>
-            <li><a href="/orders">Orders</a></li>
-        </nav>
-    </div>
-</div>
 
 
 
