--- a/templates/products/stock.html
+++ b/templates/products/stock.html
@@ -2,10 +2,12 @@
 
 {%block content%}
 
-<div>
+<h2>Product List</h2>
+
+<div class="add-new">
     <nav>
         <ul>
-            <li><a href="/products/new">Add Item</a></li>
+            <li><a href="/products/new">Add New Product</a></li>
         </ul>
     </nav>
 </div>
@@ -14,20 +16,9 @@
     <div class="product">
         <div class="content">
             <a href="/products/{{product.id}}">{{product.prod_name}}</a> <br>
-            <!-- {{product.prod_desc}} 
-            <div class="qty">
-                {{product.stock_qty}}</a> units
-                <span class="cost">
-                    <br>
-                    buy : {{product.buy_cost}}
-                    <br>
-                    sell : {{ product.sell_price }}
-                </span>
-            </div>
-            <p><a href="/product/{{product.id}}/edit">Edit</a></p>
-            <div class="buttons"> -->
+
                 <form class="delete-form" action="/products/{{product.id}}/delete" method="POST">
-                    <button class="trash-button"><i class="fa fa-trash-o fa-3x" style="color:rgb(58, 12, 12)" aria-hidden="true"></i></button>
+                    <button class="trash-button"><i class="fa fa-trash-o fa-1x" style="color:rgb(58, 12, 12)" aria-hidden="true"></i></button>
                 </form>
                 <br>
                 Manufactured by : {{product.manufacturer.manufacturer_name}} in {{product.manufacturer.country}}
